--- a/assets/bundles/bundle_in_ID.properties
+++ b/assets/bundles/bundle_in_ID.properties
@@ -19,7 +19,7 @@ block.cyber-io-ic-machine-s.name=IC Maker 3000
 category.cyber-io-heimdall=Heimdall
 category.cyber-io-data-transfer=Data Transfer
 
-# simple (and bad(?)) translations. may be inaccurate.
+# Any translation below this comment were translated without Google Translate.
 block.cyber-io-holo-floor.name=Lantai Holo
 block.cyber-io-holo-floor.description=Lantai Holografis.
 block.cyber-io-holo-wall.name=Dinding Holo
@@ -109,7 +109,8 @@ advanced.cyber-io.map-cleaner=Pembersih Peta
 setting.cyber-io-show-update.name=Tampilkan notifikasi pembaruan Cyber IO
 advanced.cyber-io.map-cleaner.description=Menyalakan pembersih peta.
 
-# Any translations after this comment was Translated by Google Translate.
+# Any translations after this comment were Translated by Google Translate.
+# may be very inaccurate.
 block.cyber-io-deleter.stats.bullet.damage=[stat]{0} + {1}% kehilangan HP [lightgray] damage
 block.cyber-io-deleter.stats.bullet.execution=Jalankan HP <= [stat]{0}%[lightgray]
 block.cyber-io-prisma-obelisk.tip=Tautkan dengan Prisma berdampingan
