--- a/assets/bundles/bundle_in_ID.properties
+++ b/assets/bundles/bundle_in_ID.properties
@@ -12,7 +12,7 @@ block.cyber-io-DDoS.name=DDoS
 item.cyber-io-ic.name=IC
 liquid.cyber-io-cyberion.name=Cyberion
 bar.cyber-io.null=Null
-bar.cyber-io.client=Client
+bar.cyber-io.client=Klien
 bar.cyber-io.host=Host
 block.cyber-io-anti-virus.name=Antivirus
 block.cyber-io-ic-machine-s.name=IC Maker 3000
