[release] just release v5.0

--- a/Info/ReleaseMessage/v5.0.md
+++ b/Info/ReleaseMessage/v5.0.md
@@ -1,10 +1,10 @@
 ### Changes
 
 - V139 supports.
-- The better text, animation and sound.
+- The better texts, animations and sounds.
 - Indonesian support.
 - Better Chinese(`zh_CN`&`zh_TW`) translation.
-- Two new turrets thanks to `THT 2#332` on Discord.
+- Two new turrets thanks to `THT 2#332` on Discord. (Still WIP)
 
 ### Warnings
 - GitHub mirror function was removed.
