using reference for WelcomeScene, WelcomeCondition, and WelcomeAction

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -17,9 +17,9 @@ Discord.no=\u6807\u8BB0\u4E3A\u5783\u573E\u5185\u5BB9
 UpdateECHO.title=\u66F4\u65B0\u201C\u98DE\u58F0\u201D
 UpdateECHO=News: \u6700\u8FD1\uFF0C\u201C\u98DE\u58F0\u201D\u7EC8\u7AEF\u63A8\u51FA\u4E86\u65B0\u7248\u672C{0}\u3002\n\
   \u4F60\u53EF\u4EE5\u70B9\u51FB\u4E0B\u9762\u7684\u6309\u94AE\u66F4\u65B0\u4F60\u7684\u7EC8\u7AEF
-UpdateECHO.button-a=[accent]\u66F4\u65B0[]
-UpdateECHO.button-b=\u4EE5\u540E\u63D0\u9192\u6211
-UpdateECHO.button-c=\u4E0D\u518D\u663E\u793A
+UpdateECHO.update=[accent]\u66F4\u65B0[]
+UpdateECHO.no=\u4EE5\u540E\u63D0\u9192\u6211
+UpdateECHO.skip-this=\u4E0D\u518D\u663E\u793A
 UpdateECHO.break-update-warning=\u8B66\u544A\uFF1A\u6700\u65B0\u7248\u672C\u7684\u66F4\u65B0\u5DF2\u635F\u574F\uFF0C\u53EF\u80FD\u4F1A\u5BFC\u81F4\u5B58\u6863\u9519\u8BEF\u3002\u8BF7\u52A1\u5FC5\u8C28\u614E\uFF01
 #v2
 EmploymentVerification.title=\u9A8C\u8BC1\u96C7\u4F63\u72B6\u6001
