--- a/assets/welcomes/uk_UA.properties
+++ b/assets/welcomes/uk_UA.properties
@@ -5,56 +5,56 @@ Default=If you saw this page, it might mean you are using the CyberIO for test o
 Default.read=I see
 #---Do not translate---
 # Standard
-welcome=\u041B\u0430\u0441\u043A\u0430\u0432\u043E \u043F\u0440\u043E\u0441\u0438\u043C\u043E \u0434\u043E Cyber IO {0}.
+welcome=Ласкаво просимо до Cyber IO {0}.
 Discord.title=Discord
-Discord=\u0406\u043D\u043E\u0434\u0456, \u0431\u043B\u0443\u043A\u0430\u044E\u0447\u0438 \u0432 \u043A\u043E\u0441\u043C\u043E\u0441\u0456 \u043D\u0430\u043E\u043E\u0434\u0438\u043D\u0446\u0456, \u0432\u0438 \u043C\u043E\u0436\u0435\u0442\u0435 \u0437\u0430\u0445\u043E\u0442\u0456\u0442\u0438 \u0437\u043D\u0430\u0439\u0442\u0438 \u044F\u043A\u0443\u0441\u044C \u0441\u043F\u0456\u043B\u044C\u043D\u043E\u0442\u0443, \n\
-   \u043F\u043E\u0434\u0456\u043B\u0438\u0442\u0438\u0441\u044F \u0441\u0432\u043E\u0454\u044E \u0440\u043E\u0431\u043E\u0442\u043E\u044E \u0430\u0431\u043E \u043F\u0440\u043E\u0441\u0442\u043E \u0437\u0456\u0448\u0442\u043E\u0432\u0445\u043D\u0443\u0442\u0438\u0441\u044F \u0456\u0437 \u043F\u0440\u043E\u0431\u043B\u0435\u043C\u043E\u044E (\u0437\u0432\u0438\u0447\u0430\u0439\u043D\u043E, \u0449\u043E \u0425\u0418\u0411 \u041D\u0415 \u0406\u0421\u041D\u0423\u0404). \n\
-   \u0413\u0430\u0440\u0430\u0437\u0434, \u043D\u0435\u0437\u0432\u0430\u0436\u0430\u044E\u0447\u0438 \u043D\u0430 \u043F\u043E\u0433\u0430\u043D\u0438\u0439 \u0441\u0438\u0433\u043D\u0430\u043B ECHO, \u043D\u0430\u0448\u0430 \u043A\u043E\u043C\u043F\u0430\u043D\u0456\u044F \u00AB\u041F\u043B\u044E\u043C \u0421\u0442\u0430\u0440 \u0406\u043D\u043A\u043E\u0440\u043F\u043E\u0440\u0435\u0439\u0448\u043D\u00BB \u0447\u0435\u043A\u0430\u0454 \u043D\u0430 \u0432\u0430\u0441 \u0443 Discord.\n\
-   \u041F\u0440\u0438\u0454\u0434\u043D\u0443\u0439\u0442\u0435\u0441\u044C \u0434\u043E \u043D\u0430\u0441, \u0449\u043E\u0431 \u0443\u0431\u0435\u0437\u043F\u0435\u0447\u0438\u0442\u0438 \u0441\u0432\u043E\u044E \u0440\u0435\u043F\u0443\u0442\u0430\u0446\u0456\u044E \u0430\u0431\u043E \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u0438\u0442\u0438 \u043F\u0440\u043E \u0432\u0441\u0435, \u0449\u043E \u0437\u0430\u0432\u0433\u043E\u0434\u043D\u043E.
+Discord=Іноді, блукаючи в космосі наоодинці, ви можете захотіти знайти якусь спільноту, \n\
+   поділитися своєю роботою або просто зіштовхнутися із проблемою. \n\
+   Гаразд, незважаючи на поганий сигнал ECHO, наша компанія «Плюм Стар Інкорпорейшн» чекає на вас у Discord.\n\
+   Приєднуйтесь до нас, щоб убезпечити свою репутацію або повідомити про все, що завгодно.
 Discord.link=https://discord.gg/PDwyxM3waw
-Discord.yes=[accent]\u041F\u0435\u0440\u0435\u0439\u0442\u0438 \u0437\u0430 \u043F\u043E\u0441\u0438\u043B\u0430\u043D\u043D\u044F\u043C[]
-Discord.no=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
-UpdateECHO.title=\u041E\u043D\u043E\u0432\u0438\u0442\u0438 ECHO
-UpdateECHO=\u041D\u043E\u0432\u0438\u043D\u0438: \u043D\u0435\u0449\u043E\u0434\u0430\u0432\u043D\u043E ECHO \u043E\u043F\u0443\u0431\u043B\u0456\u043A\u0443\u0432\u0430\u043B\u0438 \u043D\u043E\u0432\u0443 \u0432\u0435\u0440\u0441\u0456\u044E: {0}.\n\
-  \u0412\u0438 \u043C\u043E\u0436\u0435\u0442\u0435 \u043D\u0430\u0442\u0438\u0441\u043D\u0443\u0442\u0438 \u043A\u043D\u043E\u043F\u043A\u0443 \u043D\u0438\u0436\u0447\u0435, \u0449\u043E\u0431 \u043E\u043D\u043E\u0432\u0438\u0442\u0438 \u0442\u0435\u0440\u043C\u0456\u043D\u0430\u043B ECHO.
-UpdateECHO.update=\u041E\u043D\u043E\u0432\u0438\u0442\u0438
-UpdateECHO.no=\u041D\u0435 \u0437\u0430\u0440\u0430\u0437
-UpdateECHO.skip-this=\u041D\u0435 \u043F\u043E\u043A\u0430\u0437\u0443\u0432\u0430\u0442\u0438
+Discord.yes=[accent]Перейти за посиланням[]
+Discord.no=Видалити
+UpdateECHO.title=Оновити ECHO
+UpdateECHO=Новини: нещодавно ECHO опублікували нову версію: {0}.\n\
+  Ви можете натиснути кнопку нижче, щоб оновити термінал ECHO.
+UpdateECHO.update=Оновити
+UpdateECHO.no=Не зараз
+UpdateECHO.skip-this=Не показувати
 #v2
-EmploymentVerification.title=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0436\u0435\u043D\u043D\u044F \u043F\u0440\u0430\u0446\u0435\u0432\u043B\u0430\u0448\u0442\u0443\u0432\u0430\u043D\u043D\u044F
-EmploymentVerification=\u041B\u0430\u0441\u043A\u0430\u0432\u043E \u043F\u0440\u043E\u0441\u0438\u043C\u043E \u0434\u043E \u043D\u0430\u0441, \u00AB\u041F\u043B\u044E\u043C \u0421\u0442\u0430\u0440 \u0406\u043D\u043A\u043E\u0440\u043F\u043E\u0440\u0435\u0439\u0448\u043D\u00BB, \u043D\u0430\u0441\u043E\u043B\u043E\u0434\u0436\u0443\u0439\u0442\u0435\u0441\u044C \u0446\u0456\u0454\u044E \u043D\u043E\u0432\u043E\u044E \u0432\u0435\u0440\u0441\u0456\u0454\u044E, \u0449\u043E \u0441\u043F\u043E\u0432\u043D\u0435\u043D\u0430 \u043A\u0443\u043F\u043E\u044E \u043A\u0456\u0431\u0435\u0440\u043D\u0435\u0442\u0438\u0447\u043D\u0438\u0445 \u0440\u0435\u0447\u0435\u0439!\n\
-  \u041F\u0440\u043E\u0442\u0435, \u043C\u043E\u0436\u043B\u0438\u0432\u043E, \u0432\u0430\u043C \u0434\u043E\u0432\u0435\u0434\u0435\u0442\u044C\u0441\u044F \u0442\u0443\u0440\u0431\u0443\u0432\u0430\u0442\u0438\u0441\u044F \u043F\u0440\u043E \u0432\u0442\u043E\u043C\u043B\u0438\u0432\u0443 \u0440\u043E\u0431\u043E\u0442\u0443 \u0437 \u043F\u0456\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u043D\u044F\u043C \u0446\u0438\u0445 \u043F\u0440\u0438\u0441\u0442\u0440\u043E\u0457\u0432.\n\
-   \u0423\u0441\u0435 \u043E\u0434\u043D\u043E, \u0449\u0430\u0441\u0442\u0438!
-EmploymentVerification.read=\u0414\u043E\u043B\u0443\u0447\u0438\u0442\u0438\u0441\u044F
+EmploymentVerification.title=Підтвердження працевлаштування
+EmploymentVerification=Ласкаво просимо до нас, «Плюм Стар Інкорпорейшн», насолоджуйтесь цією новою версією, що сповнена купою кібернетичних речей!\n\
+  Проте, можливо, вам доведеться турбуватися про втомливу роботу з підключенням цих пристроїв.\n\
+   Усе одно, щасти!
+EmploymentVerification.read=Долучитися
 #v3
-ResearchProject.title=\u0414\u043E\u0441\u043B\u0456\u0434\u043D\u0438\u0446\u044C\u043A\u0438\u0439 \u043F\u0440\u043E\u0454\u043A\u0442
-ResearchProject=\u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0440\u0430\u043D\u043A\u0443, \u043D\u043E\u0432\u0430\u0447\u043A\u0443! \u041E\u0441\u043A\u0456\u043B\u044C\u043A\u0438 \u043A\u043E\u043B\u0438\u0448\u043D\u044C\u043E\u0433\u043E \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430 \u043D\u0430 \u0432\u0430\u0448\u0456\u0439 \u043F\u043E\u0441\u0430\u0434\u0456 \u0431\u0443\u043B\u043E \u0437\u0432\u0456\u043B\u044C\u043D\u0435\u043D\u043E (\u043D\u0443\u0443\u0443\u0443... \u0444\u0456\u0437\u0438\u0447\u043D\u043E),\n\
-  \u043F\u0440\u043E\u0454\u043A\u0442 \u00AB\u0413\u043E\u043B\u043E\u0433\u0440\u0430\u043C\u0430\u00BB (Holo-proj) \u043D\u0430 \u0442\u0440\u0438\u0432\u0430\u043B\u0438\u0439 \u0447\u0430\u0441 \u043F\u0440\u0438\u0437\u0443\u043F\u0438\u043D\u0435\u043D\u043E.\n\
-   \u0410\u043B\u0435, \u043D\u0430 \u0449\u0430\u0441\u0442\u044F, \u0446\u0435\u0439 \u043F\u0440\u043E\u0454\u043A\u0442 \u0442\u0435\u043F\u0435\u0440 \u043F\u0435\u0440\u0435\u0434\u0430\u043D\u0438\u0439 \u0432\u0430\u043C, \u043D\u0430\u0448 \u0440\u044F\u0442\u0456\u0432\u043D\u0438\u043A. \u041C\u0435\u0440\u0449\u0456\u0439 \u0434\u043E \u0440\u043E\u0431\u043E\u0442\u0438!
-ResearchProject.read=\u0419\u0442\u0438 \u043F\u0440\u0430\u0446\u044E\u0432\u0430\u0442\u0438
-TheSHIP.title=\u041A\u043E\u0440\u0430\u0431\u0435\u043B\u044C
-TheSHIP=\u0429\u043E \u0454 \u043D\u0430\u0439\u0433\u043E\u043B\u043E\u0432\u043D\u0456\u0448\u0438\u043C, \u043A\u043E\u043B\u0438 \u0432\u0438 \u043B\u0456\u0442\u0430\u0454\u0442\u0435 \u0432 \u043A\u043E\u0441\u043C\u043E\u0441\u0456 \u043D\u0430\u043E\u0434\u0438\u043D\u0446\u0456? \u0422\u0430\u043A, \u0437\u0432\u0438\u0447\u0430\u0439\u043D\u043E, \u0446\u0435 \u043A\u043E\u0441\u043C\u0456\u0447\u043D\u0438\u0439 \u043A\u043E\u0440\u0430\u0431\u0435\u043B\u044C.\n\
- \u041D\u0430\u0439\u043A\u0440\u0430\u0449\u0438\u043C \u0456 \u043D\u0430\u0439\u0440\u043E\u0437\u0441\u0443\u0434\u043B\u0438\u0432\u0456\u0448\u0438\u043C \u0432\u0438\u0431\u043E\u0440\u043E\u043C \u0454 \u043A\u043E\u0440\u0430\u0431\u0435\u043B\u044C, \u0432\u0438\u0440\u043E\u0431\u043B\u0435\u043D\u0438\u0439 \u00AB\u041F\u043B\u044E\u043C \u0421\u0442\u0430\u0440 \u0406\u043D\u043A\u00BB,\n \u043D\u0430 \u043E\u0441\u043D\u043E\u0432\u0456 \u043A\u0435\u0440\u043E\u0432\u0430\u043D\u043E\u0433\u043E \u044F\u0434\u0435\u0440\u043D\u043E\u0433\u043E \u0441\u0438\u043D\u0442\u0435\u0437\u0443, \u0442\u0430 \u044F\u043A\u0438\u0439 \u0432\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0454 \u043D\u0430\u0439\u043D\u043E\u0432\u0456\u0448\u0443 \u041E\u0421 Ouroboros (\u0441\u0442\u0430\u0431\u0456\u043B\u044C\u043D\u0456\u0441\u0442\u044C \u0433\u0430\u0440\u0430\u043D\u0442\u043E\u0432\u0430\u043D\u043E).\n\
-  \u041A\u043E\u0434 \u0442\u043E\u0432\u0430\u0440\u0443: 111_1111_11_1001\n\
-  PS: \u041A\u043E\u043D\u0441\u0443\u043B\u044C\u0442\u0430\u0446\u0456\u044E ECHO \u043F\u0440\u0438\u0439\u043D\u044F\u0442\u043E.
-TheSHIP.read=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
+ResearchProject.title=Дослідницький проєкт
+ResearchProject=Доброго ранку, новачку! Оскільки колишнього співробітника на вашій посаді було звільнено (нуууу... фізично),\n\
+  проєкт «Голограма» (Holo-proj) на тривалий час призупинено.\n\
+   Але, на щастя, цей проєкт тепер переданий вам, наш рятівник. Мерщій до роботи!
+ResearchProject.read=Йти працювати
+TheSHIP.title=Корабель
+TheSHIP=Що є найголовнішим, коли ви літаєте в космосі наодинці? Так, звичайно, це космічний корабель.\n\
+ Найкращим і найрозсудливішим вибором є корабель, вироблений «Плюм Стар Інк»,\n на основі керованого ядерного синтезу, та який використовує найновішу ОС Ouroboros (стабільність гарантовано).\n\
+  Код товару: 111_1111_11_1001\n\
+  PS: Консультацію ECHO прийнято.
+TheSHIP.read=Видалити
 ECHO.title=ECHO
-ECHO=\u0429\u043E\u0431 \u043F\u043E\u0434\u043E\u043B\u0430\u0442\u0438 \u0431\u0430\u0440\u2019\u0454\u0440\u0438 \u0441\u043F\u0456\u043B\u043A\u0443\u0432\u0430\u043D\u043D\u044F \u043C\u0456\u0436 \u0440\u0456\u0437\u043D\u0438\u043C\u0438 \u0456\u0441\u0442\u043E\u0442\u0430\u043C\u0438 \u0442\u0430 \u043C\u043E\u0432\u0430\u043C\u0438 \u043D\u0430 \u043F\u043B\u0430\u043D\u0435\u0442\u0430\u0445, \u0431\u0443\u043B\u043E \u0440\u043E\u0437\u0440\u043E\u0431\u043B\u0435\u043D\u043E ECHO.\n\
-  \u0426\u0435 \u0437\u0430\u0431\u0435\u0437\u043F\u0435\u0447\u0438\u043B\u043E \u043F\u0440\u043E\u0441\u0442\u0438\u0439 \u0441\u043F\u043E\u0441\u0456\u0431 \u0440\u043E\u0437\u043C\u043E\u0432\u043B\u044F\u0442\u0438, \u0432\u0437\u0430\u0454\u043C\u043E\u0434\u0456\u044F\u0442\u0438 \u043E\u0434\u0438\u043D \u0437 \u043E\u0434\u043D\u0438\u043C \u043E\u0434\u043D\u0438\u043C \u043A\u043B\u0430\u0446\u0430\u043D\u043D\u044F\u043C \u043C\u0438\u0448\u0456.\n\
-  \u041A\u0440\u0456\u043C \u0442\u043E\u0433\u043E, ECHO \u0437\u0431\u0435\u0440\u0456\u0433\u0430\u0454 \u0444\u0430\u0439\u043B\u0438 cookie \u043D\u0430 \u0442\u0435\u0440\u043C\u0456\u043D\u0430\u043B\u0430\u0445 ECHO, \u0449\u043E\u0431 \u043F\u043E\u043A\u0440\u0430\u0449\u0438\u0442\u0438 \u0432\u0430\u0448 \u0434\u043E\u0441\u0432\u0456\u0434 \u0441\u043F\u0456\u043B\u043A\u0443\u0432\u0430\u043D\u043D\u044F.\n\
- \u0414\u0435\u0442\u0430\u043B\u044C\u043D\u0430 \u0456\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u044F \u043F\u0440\u043E \u0432\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u0430\u043D\u043D\u044F \u0444\u0430\u0439\u043B\u0456\u0432 cookie \u043D\u0430 \u0432\u0430\u0448\u043E\u043C\u0443 \u0442\u0435\u0440\u043C\u0456\u043D\u0430\u043B\u0456 ECHO \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u0430 \u043D\u0430 [#e53935]*404 \u041D\u0435 \u0437\u043D\u0430\u0439\u0434\u0435\u043D\u043E*[].
-ECHO.read=\u041F\u0440\u0438\u0439\u043D\u044F\u0442\u0438
-NewBrains.title=\u041D\u043E\u0432\u0456 \u043C\u0456\u0437\u043A\u0438
-NewBrains=\u00AB\u041D\u044C\u044E \u0411\u0440\u0435\u0439\u043D\u0437 \u041A\u043E\u0440\u043F\u043E\u0440\u0435\u0439\u0448\u043D\u00BB, \u044F\u043A\u0430 \u043B\u0456\u0434\u0438\u0440\u0443\u0454 \u0432 \u0433\u0430\u043B\u0443\u0437\u0456 \u0431\u0456\u043E\u0442\u0435\u0445\u043D\u043E\u043B\u043E\u0433\u0456\u0439, \u043C\u0435\u0434\u0438\u0446\u0438\u043D\u0438, \u043D\u0435\u0432\u0440\u043E\u043B\u043E\u0433\u0456\u0457 \u0442\u043E\u0449\u043E, \u0454 \u043E\u0434\u043D\u0456\u0454\u044E \u0437 \u043D\u0430\u0439\u0431\u0456\u043B\u044C\u0448\u0438\u0445 \u043A\u043E\u043C\u043F\u0430\u043D\u0456\u0439 \u0443 \u0432\u0441\u044C\u043E\u043C\u0443 \u0441\u0432\u0456\u0442\u0456.\n\
-  \u0417\u0433\u0456\u0434\u043D\u043E \u0437 \u043D\u0430\u0437\u0432\u043E\u044E, \u0432\u043E\u043D\u0438 \u0437\u0430\u0432\u0436\u0434\u0438 \u043F\u0435\u0440\u0448\u0456 \u0432 \u043D\u0430\u0443\u043A\u0430\u0445 \u043F\u0440\u043E \u043C\u043E\u0437\u043E\u043A.\n\u0411\u0456\u043B\u044C\u0448\u0456\u0441\u0442\u044C \u0456\u0437 \u0432\u0430\u0441 \u0446\u044C\u043E\u0433\u043E \u0449\u0435 \u043D\u0435 \u043F\u043E\u043C\u0456\u0442\u0438\u043B\u0438, \u0430\u043B\u0435 \u0446\u0435 \u0442\u0430\u043A\u043E\u0436 \u0454 \u0447\u0430\u0441\u0442\u0438\u043D\u043E\u044E \u0457\u0445\u043D\u0456\u0445 \u043F\u0440\u043E\u0435\u043A\u0442\u0456\u0432.
-NewBrains.read=\u041F\u043E\u0437\u043D\u0430\u0447\u0438\u0442\u0438 \u043F\u0440\u043E\u0447\u0438\u0442\u0430\u043D\u0438\u043C
-AdBlock.title=\u0417\u0430\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438 \u0440\u0435\u043A\u043B\u0430\u043C\u0443
-AdBlock=\u0412\u0456\u0434\u0447\u0443\u0432\u0430\u0454\u0442\u0435, \u0449\u043E \u0441\u043F\u043B\u0438\u0432\u0430\u044E\u0447\u0430 \u0440\u0435\u043A\u043B\u0430\u043C\u0430 \u0432\u0430\u0441 \u0434\u0440\u0430\u0442\u0443\u0454??\n\
-  \u0423\u0441\u0442\u0430\u043D\u043E\u0432\u0456\u0442\u044C AdBlock, \u044F\u043A\u0438\u0439 \u043C\u043E\u0436\u0435 \u0437\u0430\u0431\u0435\u0437\u043F\u0435\u0447\u0438\u0442\u0438 \u0432\u0430\u043C \u0430\u0431\u0441\u043E\u043B\u044E\u0442\u043D\u043E \u0447\u0438\u0441\u0442\u0435 \u0441\u0435\u0440\u0435\u0434\u043E\u0432\u0438\u0449\u0435!\n\
-  P.S.: \u042F\u043A\u0449\u043E \u0432\u0438 \u0445\u043E\u0447\u0435\u0442\u0435 \u043F\u043E\u0432\u0435\u0440\u043D\u0443\u0442\u0438 \u0440\u0435\u043A\u043B\u0430\u043C\u0443, \u043F\u0435\u0440\u0435\u0432\u0456\u0440\u0442\u0435 \u043D\u0430\u043B\u0430\u0448\u0442\u0443\u0432\u0430\u043D\u043D\u044F \u0433\u0440\u0438:\n\
-  \u041D\u0430\u043B\u0430\u0448\u0442\u0443\u0432\u0430\u043D\u043D\u044F >> Cyber IO >> \u041E\u0442\u0440\u0438\u043C\u0443\u0432\u0430\u0442\u0438 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F \u0432\u0456\u0434 \u00AB\u041F\u043B\u044E\u043C \u0421\u0442\u0430\u0440 \u0406\u043D\u043A\u043E\u0440\u043F\u043E\u0440\u0435\u0439\u0448\u043D\u00BB
-AdBlock.yes=[accent]\u041D\u0435 \u0437\u0430\u0440\u0430\u0437[]
-AdBlock.no=\u0423\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u0438
-404NotFound.title=[#e53935]\u041F\u043E\u043C\u0438\u043B\u043A\u0430 404[]
-404NotFound=[#e53935]\u041D\u0435 \u0437\u043D\u0430\u0439\u0434\u0435\u043D\u043E.[]
-404NotFound.read=\u0412\u0438\u0439\u0442\u0438
+ECHO=Щоб подолати бар’єри спілкування між різними істотами та мовами на планетах, було розроблено ECHO.\n\
+  Це забезпечило простий спосіб розмовляти, взаємодіяти один з одним одним клацанням миші.\n\
+  Крім того, ECHO зберігає файли cookie на терміналах ECHO, щоб покращити ваш досвід спілкування.\n\
+ Детальна інформація про використання файлів cookie на вашому терміналі ECHO доступна на [#e53935]*404 Не знайдено*[].
+ECHO.read=Прийняти
+NewBrains.title=Нові мізки
+NewBrains=«Нью Брейнз Корпорейшн», яка лідирує в галузі біотехнологій, медицини, неврології тощо, є однією з найбільших компаній у всьому світі.\n\
+  Згідно з назвою, вони завжди перші в науках про мозок.\nБільшість із вас цього ще не помітили, але це також є частиною їхніх проектів.
+NewBrains.read=Позначити прочитаним
+AdBlock.title=Заблокувати рекламу
+AdBlock=Відчуваєте, що спливаюча реклама вас дратує??\n\
+  Установіть AdBlock, який може забезпечити вам абсолютно чисте середовище!\n\
+  P.S.: Якщо ви хочете повернути рекламу, перевірте налаштування гри:\n\
+  Налаштування >> Cyber IO >> Отримувати повідомлення від «Плюм Стар Інкорпорейшн»
+AdBlock.yes=[accent]Не зараз[]
+AdBlock.no=Установити
+404NotFound.title=[#e53935]Помилка 404[]
+404NotFound=[#e53935]Не знайдено.[]
+404NotFound.read=Вийти
